# ChangeLog for dev-cpp/icnc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Dec 2014; Christoph Junghans <ottxor@gentoo.org> icnc-9999.ebuild:
  sync with upstream

  09 Dec 2014; Christoph Junghans <ottxor@gentoo.org> icnc-9999.ebuild:
  testing got fixed upstream

  08 Dec 2014; Christoph Junghans <ottxor@gentoo.org> icnc-9999.ebuild:
  sync with gx86

  21 Nov 2014; Christoph Junghans <ottxor@gentoo.org> icnc-9999.ebuild:
  fixed install location

  14 Nov 2014; Christoph Junghans <ottxor@gentoo.org> icnc-9999.ebuild:
  fully supports mpi

  13 Nov 2014; Christoph Junghans <ottxor@gentoo.org> icnc-9999.ebuild:
  added IUSE=mpi

  30 Sep 2014; Christoph Junghans <ottxor@gentoo.org> icnc-9999.ebuild:
  live ebuild update

  25 Sep 2014; Christoph Junghans <ottxor@gentoo.org> icnc-9999.ebuild:
  live ebuild update

*icnc-9999 (25 Sep 2014)

  25 Sep 2014; Christoph Junghans <ottxor@gentoo.org> +icnc-9999.ebuild,
  +metadata.xml:
  initial commit