@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/icnc
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  08 Feb 2015; Christoph Junghans <ottxor@gentoo.org> icnc-9999.ebuild:
+  fix bug #539318
 
   11 Dec 2014; Christoph Junghans <ottxor@gentoo.org> icnc-9999.ebuild:
   sync with upstream
